--- a/member.html
+++ b/member.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.3.67/css/materialdesignicons.min.css">
 </head>
 
-<body class="min-h- bg-gray-900 text-white">
+<body class="min-h text-white ">
 
 
 <nav>
@@ -71,11 +71,11 @@
                 </div>
         </nav>
 
-    <div class="container mx-auto p-4 md:p-8">
+    <div style="background: transparent;display: flex; justify-content: center; align-items: center; width: 100%; flex-direction: column;">
         <h1 class="text-2xl md:text-4xl font-bold mb-8">JKT48 Members</h1>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-8">
-            <section class="bg-gray-800 p-4 md:p-6 rounded-lg">
-                <h2 class="text-xl md:text-2xl font-bold mb-4 md:mb-6 flex items-center">
+            <section class=" p-4 md:p-6 rounded-lg">
+                <h2 class="text-xl md:text-2xl font-bold mb-4 md:mb-6 flex items-center"style="display: flex; justify-content: center; align-items: center; width: 100%; ">
                     <i class="fas fa-user-circle mr-2"></i> Members
                 </h2>
                 <div id="core-members" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 auto-rows-max">
@@ -87,7 +87,7 @@
                 </div>
             </section>
 
-            <section class="bg-gray-800 p-4 md:p-6 rounded-lg">
+            <section class=" p-4 md:p-6 rounded-lg" style="display: flex; justify-content: center; align-items: center; width: 100%; flex-direction: column;">
                 <h2 class="text-xl md:text-2xl font-bold mb-4 md:mb-6 flex items-center">
                     <i class="fas fa-user-graduate mr-2"></i> Trainee Members
                 </h2>
