--- a/event.html
+++ b/event.html
@@ -67,19 +67,6 @@
                 </div>
         </nav>
 
-    <div class="section">
-        <div class="container">
-            <div class="box">
-                <h2 class="titleup"><span class="icon"><i class="fas fa-theater-masks"></i></span> Recent
-                    Theater</h2><br>
-                <hr><br>
-                <div id="recent" class="card-container"></div>
-                <br>
-                <hr><br>
-
-            </div>
-        </div>
-    </div>
             <div class="section">
                 <div class="container">
                     <div class="box">
@@ -88,7 +75,12 @@
                         <br>
                         <hr><br>
                         <p id="noTheaterMessage"></p>
-                        <div data-aos="zoom-in" id="upcoming" class="card-container"></div>
+                        <div style="display: flex; width: 100%; "> 
+<div data-aos="zoom-in" 
+     id="upcoming" 
+     style="display: flex; width: 100%; flex-wrap: nowrap; flex-direction: row; overflow-x: auto; ">
+</div>
+</div>
                         <br>
                         <hr><br>
                     </div>
