--- a/home.html
+++ b/home.html
@@ -156,9 +156,12 @@
                         <br>
                         <hr><br>
                         <p id="noTheaterMessage"></p>
-
-                        <div data-aos="zoom-in" id="upcoming" class="card-container"></div>
-
+                        <div style="display: flex; width: 100%; "> 
+<div data-aos="zoom-in" 
+     id="upcoming" 
+     style="display: flex; width: 100%; flex-wrap: nowrap; flex-direction: row; overflow-x: auto; ">
+</div>
+</div>
                         <br>
                         <hr><br>
                     </div>
