--- a/dmember.html
+++ b/dmember.html
@@ -26,7 +26,7 @@
 
     <section class="flex-grow flex items-center justify-center">
         <div class="container mx-auto px-4 py-4">
-            <div id="member-detail" class="bg-gray-800 rounded-lg shadow-lg overflow-hidden">
+            <div id="member-detail" class=" rounded-lg shadow-lg overflow-hidden">
                 <div id="loading-skeleton" class="animate-pulse p-4 md:p-8 relative">
                     <div class="absolute top-4 right-4 md:top-8 md:right-8">
                         <div class="w-20 h-8 bg-gray-700 rounded-full"></div>
