--- a/event.html
+++ b/event.html
@@ -95,6 +95,19 @@
             </div>
         </div>
     </div>
+    <div style="padding: 20px;">
+  <div style="display: flex; align-items: center; padding: 10px 0;">
+<div class="live-indicator">
+  <div class="circle"></div>
+  <div class="pulse"></div>
+</div>
+    <h1 style="font-size: 24px; margin-left: 10px;">Live</h1>
+    <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;" id="liveCount">0 Member</div>
+  </div>
+  <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;"></div>
+  <div style="display: flex; overflow-x: auto; gap: 10px; margin-top: 20px; width: 100%;" class="card-nowlive-container"></div>
+  
+</div>
     <br>
     <br>
     <br>
@@ -111,6 +124,7 @@
     <script src="script/theater.js"></script>
     <script src="script/inject.js"></script>
     <script src="../script/main.js"></script>
+      <script src="script/nowlive.js"></script>
 </body>
 
 </html>
