--- a/event.html
+++ b/event.html
@@ -69,17 +69,16 @@
 
             <div class="section">
                 <div class="container">
-                    <div class="box">
+                    <div style="width: 100%; display: flex; flex-direction: column;">
                         <h1 class="titleup"><span class="icon"><i class="fas fa-theater-masks"></i></span> Upcoming
                             Theater</h1>
                         <br>
                         <hr><br>
                         <p id="noTheaterMessage"></p>
-                        <div style="display: flex; width: 100%; "> 
+
 <div data-aos="zoom-in" 
      id="upcoming" 
-     style="display: flex; width: 100%; flex-wrap: nowrap; flex-direction: row; overflow-x: auto; ">
-</div>
+      style="width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;gap: 20px;"">
 </div>
                         <br>
                         <hr><br>
