--- a/home.html
+++ b/home.html
@@ -136,11 +136,11 @@
     <div class="section">
         <div class="container">
             <div class="flex-container">
-                <div class="box-live">
+                <div class="box-live" style="background: transparent;width: 100%;">
                     <h2 class="titleup"><span class="icon"><i class="fa fa-history"></i></span> Recent Live</h2>
-                    <div id="liveListIdn"></div>
+                    <div id="liveListIdn" ></div>
                
-                    <div id="liveListShowroom"></div>
+                    <div id="liveListShowroom" ></div>
                     <br><hr><br>
                     <div style="display: flex; justify-content: center; align-items: center;">                    <button style="margin-left: 10px; width: 100px;display: flex; justify-content: center; align-items: center;"class="btn" onclick="goToLink('live.html')">Selengkapnya</button></div>
 
