--- a/live.html
+++ b/live.html
@@ -69,14 +69,14 @@
     <div class="section">
         <div class="container">
             <div class="flex-container">
-                <div class="box-live">
+                <div class="box-live" style="background: transparent;">
                     <h2 class="titleup"><span class="icon"><i class="fa fa-history"></i></span> Recent Live Idn</h2>
                     <div id="liveListIdn"></div>
                     <br><hr><br>
                     <button id="prevButtonIdn" onclick="listLiveIdn('prev', 'Idn')" class="btn">Previous</button>
                     <button id="nextButtonIdn" onclick="listLiveIdn('next', 'Idn')" class="btn"style="margin-left: 10px;">Next</button>
                 </div>
-                <div class="box-live">
+                <div class="box-live"style="background: transparent;">
                     <h2 class="titleup"><span class="icon"><i class="fa fa-history"></i></span> Recent Live Showroom</h2>
                     <div id="liveListShowroom"></div>
                     <br><hr><br>
