--- a/home.html
+++ b/home.html
@@ -136,7 +136,7 @@
     <div class="section">
         <div class="container">
             <div class="flex-container">
-                <div class="box-live" style="background: transparent;width: 100%;">
+                <div class="box-live" style="background: transparent;">
                     <h2 class="titleup"><span class="icon"><i class="fa fa-history"></i></span> Recent Live</h2>
                     <div id="liveListIdn" ></div>
                
