--- a/home.html
+++ b/home.html
@@ -138,8 +138,8 @@
             <div class="flex-container">
                 <div class="box-live" style="background: transparent;">
                     <h2 class="titleup"><span class="icon"><i class="fa fa-history"></i></span> Recent Live</h2>
-                 <div id="liveListIdn liveListShowroom" ></div>
-               
+                 <div id="liveListIdn" ></div>
+<div id="liveListShowroom"></div>
 
                     <br><hr><br>
                     <div style="display: flex; justify-content: center; align-items: center;">                    <button style="margin-left: 10px; width: 100px;display: flex; justify-content: center; align-items: center;"class="btn" onclick="goToLink('live.html')">Selengkapnya</button></div>
