--- a/live.html
+++ b/live.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>48Intens Official</title>
+    <title>g</title>
     <meta name="description" content="BRINGING JKT48 CLOSER TO YOU" />
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
@@ -79,17 +79,7 @@
 
 
 <div class="section">
-  <div style="display: flex; width: 100%; justify-content: center;gap: 5px">
-                <button class="buttongoweb inactive-btn" style="width: 120px; height: 50px; display: flex; justify-content: center; align-items: center; color: white;" onclick="toggleDisplay('all', this)"
-            class="active-btn"id="btnAll">All</button>
-
-            <!-- Tombol untuk menampilkan konten Live Showroom -->
-            <button class="buttongoweb inactive-btn" style="width: 120px; height: 50px; display: flex; justify-content: center; align-items: center; color: white;" onclick="toggleDisplay('liveListShowroom', this)" id="btnShowroom">Live Showroom</button>
-
-            <!-- Tombol untuk menampilkan konten Live IDN -->
-            <button class="buttongoweb inactive-btn" style="width: 120px; height: 50px; display: flex; justify-content: center; align-items: center; color: white;" onclick="toggleDisplay('liveListIdn', this)" id="btnIdn">Live IDN</button>
-
-  </div>
+                        <h1 class="titleup"><span class="icon"><i class="mdi mdi-history"></i></span> Recent Live</h1>
     <div class="container">
         <div class="flex-container">
             <!-- Tombol untuk menampilkan semua konten -->
