--- a/dnews.html
+++ b/dnews.html
@@ -29,7 +29,7 @@
     <div class="section">
         <div class="container">
 
-                <div id="newsDetail"></div>
+                <div id="newsDetail" style="display: flex; justify-content: center; width: 95%;font-weight: 400;"></div>
 
         </div>
     </div>
