--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
 
 <div style="padding: 20px;">
   <div style="display: flex; align-items: center; padding: 10px 0;">
-<div class="live-indicator">
+<div class="nolive-indicator">
   <div class="circle"></div>
   <div class="pulse"></div>
 </div>
