--- a/event.html
+++ b/event.html
@@ -78,7 +78,7 @@
 
 <div data-aos="zoom-in" 
      id="upcoming" 
-      style="width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;gap: 20px;"">
+      style="width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;gap: 20px;">
 </div>
                         <br>
                         <hr><br>
@@ -96,7 +96,7 @@
     </div>
     <div style="padding: 20px;">
   <div style="display: flex; align-items: center; padding: 10px 0;">
-<div class="live-indicator">
+<div class="nolive-indicator">
   <div class="circle"></div>
   <div class="pulse"></div>
 </div>
