--- a/dnews.html
+++ b/dnews.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.1.2/lazysizes.min.js"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
@@ -61,9 +62,17 @@
                         
                 </div>
         </nav>
+          <div class="header_app" style="height: 50px;background-color: #0F131DCF;">
 
+      <div class="header_logo">
+    <button class="buttongoweb" onclick="goToLink('news.html')"><span class="mdi mdi-chevron-left"></span>    </button>
+        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Berita</span>
+      </div>
+
+
+  </div>
     <div class="section">
-        <div class="container">
+        <div class="container" style="margin-top: 20px;">
 
                 <div id="newsDetail" style="display: flex; justify-content: center; width: 95%;font-weight: 400;"></div>
 
