--- a/event.html
+++ b/event.html
@@ -66,14 +66,22 @@
                         
                 </div>
         </nav>
+  <div class="header_app" style="height: 50px;background-color: #0F131DCF;">
 
+
+      <div class="header_logo">
+    <button class="buttongoweb"><span class="fas fa-theater-masks"></span>    </button>
+        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Event & Theater</span>
+      </div>
+
+
+  </div>
             <div class="section">
                 <div class="container">
-                    <div style="width: 100%; display: flex; flex-direction: column;">
-                        <h1 class="titleup"><span class="icon"><i class="fas fa-theater-masks"></i></span> Upcoming
-                            Theater</h1>
+                    <div style="width: 100%; display: flex; flex-direction: column; margin-top: 35px;">
+                        <div class="titleup" style=" display: flex; align-items: center; gap: 10px; justify-content:center;margin-right: auto;margin-left: 10px;"><span class="icon"><i style="color:#3594FF;" class="mdi mdi-theater"></i></span> <h1 style="font-size: 19px;">Jadwal Theater</h1> </div>
                         <br>
-                        <hr><br>
+                       
                         <p id="noTheaterMessage"></p>
 
 <div data-aos="zoom-in" 
