--- a/live.html
+++ b/live.html
@@ -77,9 +77,18 @@
                 </div>
         </nav>
 
+  <div class="header_app" style="height: 50px;background-color: #0F131DCF;">
 
+
+      <div class="header_logo">
+    <button class="buttongoweb"><span class="mdi mdi-history"></span>    </button>
+        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Recent Live</span>
+      </div>
+
+
+  </div>
 <div class="section">
-                        <h1 class="titleup"><span class="icon"><i class="mdi mdi-history"></i></span> Recent Live</h1>
+
     <div class="container">
         <div class="flex-container">
             <!-- Tombol untuk menampilkan semua konten -->
