--- a/news.html
+++ b/news.html
@@ -65,14 +65,22 @@
         </nav>
 
 
+  <div class="header_app" style="height: 50px;background-color: #0F131DCF;">
 
+
+      <div class="header_logo">
+    <button class="buttongoweb"><span class="fas fa-newspaper"></span>    </button>
+        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Berita</span>
+      </div>
+
+
+  </div>
     <div class="section">
         <div class="container">
             <div class="flex-container">
 
-                <h2 class="titleup"><span class="icon"><i class="fas fa-newspaper"></i></span> News</h2><br>
 
-                <div style="margin-top: -20px;"id="newsList"></div>
+                <div style="margin-top: 20px;"id="newsList"></div>
                 
                 <div style="display: flex; justify-content: center;gap: 10px;">
                   
