--- a/home.html
+++ b/home.html
@@ -62,9 +62,18 @@
                         
                 </div>
         </nav>
+  <div class="header_app" style="height: 50px;background-color: #0F131DCF;">
 
+
+      <div class="header_logo">
+    <button class="buttongoweb"><span></span>    </button>
+        <span style="font-size: 20px; font-weight: 700; font-family: 'Zen Maru Gothic';margin-left: 10px;" >Home</span>
+      </div>
+
+
+  </div>
     <div class="section">
-        <div class="container">
+        <div class="container" style="margin-top: 40px;">
             <div class="slideshow-container">
                 <div class="slideshow-image">
                     <a href="https://www.youtube.com/watch?v=5cy3vDjTfFY"><img src="/assets/heading-bg.jpg"
