--- a/showroom.html
+++ b/showroom.html
@@ -83,31 +83,77 @@
 
 <body class="text-center">
 
-    <div class="section">
-        <div class="container">
-            <div class="box">
-                <h1 class="titleup"> <span id="liveMemberName"></span></h1>
-                <br>
-                <hr><br>
-                <div class="card">
-                    <div class="card-body" style="background: transparent;">
-                        <div style="background: transparent;" id="video-container">
-                            <video id="video" class="card-img-top" controls></video>
-                            <img id="watermark" src="/assets/watermark.png" alt="Watermark">
-                        </div>
-                        <div id="quality-wrapper">
-                            <ul id="quality-list" class="list-unstyled mb-0"></ul>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <hr><br>
-            </div>
-        </div>
+<div class="section">
+  <div class="container">
+    <h1 class="titleup"> <span id="liveMemberName"></span></h1>
+
+    <p id="startDate"></p>
+    <p id="startTime"></p>
+    <p id="liveType"></p> <!-- Menambahkan elemen untuk menampilkan jenis live -->
+    <br>
+    <hr><br>
+    <div class="card">
+      <div style="background: transparent;width: 100%;" id="video-container">
+        <video id="video" class="card-img-top" style="max-width: 100%;" controls></video>
+      </div>
     </div>
+    <br>
+    <hr><br>
+  </div>
+</div>
 
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+      
+  // Ambil parameter URL dari hash
+  const urlParams = new URLSearchParams(window.location.hash.substring(1));
+  const videoUrl = urlParams.get('url');
+  const memberName = urlParams.get('name');
+ 
+  const startDate = urlParams.get('start_date');
+  const liveType = urlParams.get('type'); // Menambahkan parameter untuk tipe live (IDN atau Showroom)
 
+  // Periksa apakah videoUrl sudah terisi dengan benar
+  if (videoUrl) {
+    const videoElement = document.getElementById('video');
+    videoElement.src = videoUrl;  // Set video URL
+    videoElement.style.display = 'block';  // Tampilkan video
+  } else {
+    console.error('Video URL tidak ditemukan!');
+  }
 
+  // Menampilkan informasi tambahan seperti nama member, jumlah viewers, dll.
+  document.getElementById('liveMemberName').textContent = memberName || 'Nama Tidak Ditemukan';
+  
+
+  if (startDate) {
+    const date = new Date(decodeURIComponent(startDate));
+
+    // Format Tanggal
+    const formattedDate = date.toLocaleDateString('id-ID', { 
+      year: 'numeric', 
+      month: 'long', 
+      day: 'numeric' 
+    });
+
+    // Format Jam
+    const formattedTime = date.toLocaleTimeString('id-ID', { 
+      hour: '2-digit', 
+      minute: '2-digit' 
+    });
+
+    // Menampilkan Tanggal dan Jam secara terpisah
+    document.getElementById('startDate').textContent = `Tanggal: ${formattedDate}`;
+    document.getElementById('startTime').textContent = `Jam: ${formattedTime}`;
+  } else {
+    document.getElementById('startDate').textContent = 'Tanggal tidak diketahui';
+    document.getElementById('startTime').textContent = 'Jam tidak diketahui';
+  }
+
+  // Menampilkan jenis live (IDN atau Showroom)
+  document.getElementById('liveType').textContent = `Platform Live: ${liveType ? liveType.charAt(0).toUpperCase() + liveType.slice(1) : 'Tidak Diketahui'}`;
+});
+</script>
     <br>
     <br>
     <br>
