--- a/showroom.html
+++ b/showroom.html
@@ -143,8 +143,8 @@
     });
 
     // Menampilkan Tanggal dan Jam secara terpisah
-    document.getElementById('startDate').textContent = `Tanggal: ${formattedDate}`;
-    document.getElementById('startTime').textContent = `Jam: ${formattedTime}`;
+    document.getElementById('startDate').textContent = `Dimulai pada Tanggal: ${formattedDate}`;
+    document.getElementById('startTime').textContent = `Dimulai pada jam: ${formattedTime}`;
   } else {
     document.getElementById('startDate').textContent = 'Tanggal tidak diketahui';
     document.getElementById('startTime').textContent = 'Jam tidak diketahui';
