--- a/showroom.html
+++ b/showroom.html
@@ -94,7 +94,7 @@
     <hr><br>
     <div class="card">
       <div style="background: transparent;width: 100%;" id="video-container">
-        <video id="video" class="card-img-top" style="max-width: 100%;" controls></video>
+        <video id="video" class="card-img-top" style="max-width: 100%;" controls autoplay muted></video>
       </div>
     </div>
     <br>
